# cabbage

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: all_experiments.yaml  all_experiments_unlimited.yaml  custom_datasets_example.yaml  local_models_example.yaml  minimal_example.yaml
docs/: all_experiments.yaml  evaluation_prompts.yaml  visual_cognition.yaml
experiment_configs/: agriexam.yaml  bppq.yaml  cca_ceu.yaml  embrapa.yaml  eppo_diff_1.yaml  eppo_diff_3.yaml  eppo_diff_5.yaml  eppo_open.yaml  plantnet_single.yaml  wikihow_all.yaml  wikihow_arrange.yaml  wikihow_missing_open.yaml  wikihow_next.yaml  wikihow_next_open.yaml
experiments/: embrapa.yaml  plantnet_multi.yaml  wikihow_all.yaml  wikihow_missing.yaml  wikihow_missing_open.yaml  wikihow_next_open.yaml
results_little/gpt-4o-mini/: wikihow_missing_open.jsonl  wikihow_next_open.jsonl
src/: GEvaluator.py  aggregate_results.py  evaluation_classes.py  generate_requests.py  main.py  models_inference.py  openai_client.py  process_results.py  utils.py
src/llm_eval/: evaluators.py  llm_client.py  llm_judge.py  model_inference.py  request_generation.py  results_aggregation.py  results_processing.py  run_pipeline.py
src/llm_eval/structured_output/: response_types.py
src/llm_eval/utils/: configuration.py  evaluation_prompts.yaml  file_io.py  formatting.py  geval.py  image_utils.py  process_utils.py
